Fix https://bugzilla.gnome.org/show_bug.cgi?id=582747

Print dialogs created by gtk_print_operation_new() set the wrong options on
cups printers that have "instances" defined in /etc/cups/lpoptions or
~/.{,cups/}lpoptions

Instances are (or have been) used by the K desktop Environment annd maybe other
software as well. They are defined for example like this (in the mentioned files):

---snip---------------------------------------------------
Default CMP600 CNDensity=-10 CNGamma=1.4 ...
Dest CMP600/Draft CNDensity=-10 CNGamma=1.8 ...
---snap---------------------------------------------------

This snippet defines:
- on the first line: the options for a "Default" (could also be "Dest") printer
"CMP600"
- on the second line: another "instance" of that printer called "Draft", with
different options

The code in gtk+/modules/printbackends/cups/gtkprintbackendcups.c
in cups_parse_user_options() parses this file but silently ignores the fact that
the second line defines "instance" options and sets the options for the default
instance of the printer, which is the only instance showing up in the print dialog
as the gtk_print_operation_new dialog doesn't handle instances at all (yet).